# defender-video-juego

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  main.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: tests.yml
assets/cfg/: bullet.json  enemies.json  humanoid.json  interface.json  player.json  waves.json  window.json  world.json
src/create/: prefab_creator.py
src/ecs/components/: c_animation.py  c_enemy_lander_state.py  c_humanoid_state.py  c_input_command.py  c_parallax.py  c_particle_lifetime.py  c_player_state.py  c_shoot_timer.py  c_star_blink.py  c_surface.py  c_terrain.py  c_viewport.py
src/ecs/load/: load_world.py
src/ecs/systems/: s_animation.py  s_camera.py  s_collision_bullet_enemy.py  s_collision_bullet_humanoid.py  s_collision_player.py  s_collision_rescue.py  s_debug_entities.py  s_debug_log.py  s_debug_rendering.py  s_enemy_lander_state.py  s_enemy_mutant_state.py  s_enemy_shooting.py  s_enemy_spawner.py  s_humanoid_state.py  s_input_player.py  s_movement.py  s_particle_cleanup.py  s_player_burner.py  s_player_burner_state.py  s_player_burner_tracking.py  s_player_state.py  s_rendering.py  s_rendering_hud.py  s_screen_bullet.py  s_screen_enemy.py  s_smart_bomb.py  (+2 more)
src/engine/: game_engine.py  game_state.py  service_locator.py
src/game/: example_scene.py  example_scene_2.py  game_over_scene.py  menu_scene.py  play_scene.py  wave_complete_scene.py  win_scene.py
tests/: conftest.py  test_animation.py  test_camera.py  test_movement.py  test_player_state.py  test_screen_player.py  test_star_blink.py  test_terrain.py
(+7 files in other folders)
