[tool.poetry]
name = "team-project"
version = "0.1.0"
description = "Video Game Development - Team Project"
authors = ["Andres Pena"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
pygame-ce = "^2.5.7"
esper = "^2.5"
pygbag = "^0.9.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
